Fixed checkbox alignment

--- a/src/components/RichTextEditor/RichTextEditor.module.css
+++ b/src/components/RichTextEditor/RichTextEditor.module.css
@@ -176,7 +176,7 @@
 .editor [data-checkbox] {
   display: inline-flex;
   align-items: center;
-  vertical-align: middle;
+  vertical-align: top;
   cursor: pointer;
   height: var(--line-height-base);
   margin-right: 4px;
